<resources>
    <string name="app_name">Literaly</string>
    <string name="pic_page_name">Upload Photo</string>
    <string name="comm_photo">Community</string>
    <string name="button1">A a</string>
    <string name="button2">B b</string>
    <string name="button3">C c</string>
    <string name="button4">D d</string>
    <string name="button5">E e</string>
    <string name="button6">F f</string>
    <string name="button7">G g</string>
    <string name="button8">H h</string>
    <string name="button9">I i</string>
    <string name="button10">J j</string>
    <string name="button11">K k</string>
    <string name="button12">L l</string>
    <string name="button13">M m</string>
    <string name="button14">N n</string>
    <string name="button15">O o</string>
    <string name="button16">P p</string>
    <string name="button17">Q q</string>
    <string name="button18">R r</string>
    <string name="button19">S s</string>
    <string name="button20">T t</string>
    <string name="button21">U u</string>
    <string name="button22">V v</string>
    <string name="button23">W w</string>
    <string name="button24">X x</string>
    <string name="button25">Y y</string>
    <string name="button26">Z z</string>
    <string name="continue1">Start Learning Words!</string>
</resources>
