<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/a"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button1"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"/>

                <Button
                    android:id="@+id/b"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button2"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/c"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/button3"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/d"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/button4"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/e"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button5" />

                <Button
                    android:id="@+id/f"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button6" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/g"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button7" />

                <Button
                    android:id="@+id/h"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button8" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/i"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button9" />

                <Button
                    android:id="@+id/j"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button10" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/k"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button11" />

                <Button
                    android:id="@+id/l"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button12" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/m"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button13" />

                <Button
                    android:id="@+id/n"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button14" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/o"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button15" />

                <Button
                    android:id="@+id/p"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button16" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/q"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button17" />

                <Button
                    android:id="@+id/r"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button18" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/s"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button19" />

                <Button
                    android:id="@+id/t"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button20" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/u"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button21" />

                <Button
                    android:id="@+id/v"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button22" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/w"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button23" />

                <Button
                    android:id="@+id/x"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/button24" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp">

                <Button
                    android:id="@+id/y"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp"
                    android:background="@drawable/button"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:text="@string/button25" />

                <Button
                    android:id="@+id/z"
                    android:layout_width="122dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/button26"
                    android:textAllCaps="false"
                    android:textColor="#FFFF"
                    android:textSize="60sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp">

                <Button
                    android:paddingTop="5dp"
                    android:background="@color/colorAccent"
                    android:id="@+id/cont"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="nextPage"
                    android:drawableTop="@drawable/ic_arrow_forward_black_24dp"/>
            </TableRow>




        </TableLayout>


    </ScrollView>

</LinearLayout>